--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,26 @@ qmframework:
     response-key: 'value'
     # 返回数据时，默认message的语言 EN/CN
     response-message-lang: EN
+  # ※※※※※※※※※AES加密配置※※※※※※※※※
+  aes:
+    # 是否启用AES对称加密传输
+    start: false
+    # AES秘钥
+    key: 'ohiah2019sDShdieub51h8910s'
+    # 加密次数
+    number: 1
+    # 统一使用的编码方式
+    encoding: 'UTF-8'
+  # ※※※※※※※※※版本控制配置※※※※※※※※※
+  version:
+    # 是否开启版本控制(ture时,每个请求需在header带上version参数)
+    start: false
+    # 系统目前版本编号
+    now: '0.0.3'
+    # 系统容忍请求版本编号(默认允许当前版本)
+    allows:
+      - '0.0.2'
+      - '0.0.1'
 
 mybatis:
   # 指定实体类包路径
@@ -27,6 +47,17 @@ mybatis:
     auto-mapping-behavior: full
 
 spring:
+  redis:
+    database: 0 # Redis数据库索引（默认为0）
+    host: 'localhost' # Redis服务器地址
+    port: 6379 # Redis服务器连接端口
+    password: '' # Redis服务器连接密码（默认为空）
+    pool:
+      max-active: 200 # 连接池最大连接数（使用负值表示没有限制）
+      max-wait: -1 # 连接池最大阻塞等待时间（使用负值表示没有限制）
+      max-idle: 10 # 连接池中的最大空闲连接
+      min-idle: 0 # 连接池中的最小空闲连接
+    timeout: 1000 # 连接超时时间（毫秒）
   datasource:
     druid:
       driver-class-name: 'com.mysql.cj.jdbc.Driver'
@@ -88,5 +119,3 @@ pagehelper:
   # 可以配置 pageNum,pageSize,count,pageSizeZero,reasonable，不配置映射的用默认值，
   # 默认值为pageNum=pageNum;pageSize=pageSize;count=countSql;reasonable=reasonable;pageSizeZero=pageSizeZero
   param: count=countSql
-
-
